# rust-vmaf

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
.helix/: languages.toml
assets/: bunny.yuv
crates/rust-vmaf/: Cargo.toml
crates/rust-vmaf-sys/: Cargo.toml  build.rs
crates/rust-vmaf-sys/src/: lib.rs
crates/rust-vmaf/src/: lib.rs  model.rs  picture.rs  tests.rs
crates/rust-vmaf/src/context/: config.rs  context.rs  initialize.rs  mod.rs  process.rs
